// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountInfo \`methods\` onFormSubmit :: publishing analytics form is valid address has changed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "action": "save_accountinfo_changes",
        "category": "account",
        "event": "trackEvent",
        "label": "submit",
      },
    ],
    Array [
      Object {
        "action": "account info",
        "category": "my account",
        "event": "trackEvent",
        "label": "address change intent",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`AccountInfo \`methods\` onFormSubmit :: publishing analytics form is valid address has not changed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "action": "save_accountinfo_changes",
        "category": "account",
        "event": "trackEvent",
        "label": "submit",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
